--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -18,3 +18,4 @@
 @import "../shared/styles/timeline.css";
 @import "../shared/styles/block-view.css";
 @import "../shared/styles/statistics-view.css";
+@import "../shared/styles/event-timeline.css";
